--- a/Flipped learning/Week03/week3.html
+++ b/Flipped learning/Week03/week3.html
@@ -30,10 +30,11 @@
     <main>
         <article>
             <h3>Week03</h3>
-            <li>I learn more in scc</li>
+            <li>I learn more in css</li>
             <li>I play a game about css during class</li>
+            <li>I learn about the basic of flex box</li>
             <li>Breifing for assignment 1 </li> 
-            <img src="Week02.png" alt="Web Development Image">
+            <img src="Week03.png" alt="Web Development Image">
         </article>
 
     </main>
