--- a/Flipped learning/index.html
+++ b/Flipped learning/index.html
@@ -29,12 +29,12 @@
     </nav>
     <main>
         <article>
-            <h3>Week01</h3>
-            <li>I learn what a web developers do</li>
-            <li>I created my first website during lesson</li> 
-            <img src="Week01.png" alt="Web Development Image">
+            <h2>Introduction</h2>
+            <p>This website contains what I have learn during the module </p>
+            <h2>Exploring the World of Web Development, One Line of Code at a Time</h2>
+            <img src="main/image.png" alt="Web Development Image">
         </article>
-
+            
     </main>
     <footer>
         <p>&copy; 2023 My Web Dev Blog</p>
