--- a/Flipped learning/week3.html
+++ b/Flipped learning/week3.html
@@ -24,16 +24,17 @@
             <li><a href="week8.html">Week08</a></li>
             <li><a href="week9.html">Week09</a></li>
             <li><a href="week10.html">Week10</a></li>
-            
+
         </ul>
     </nav>
     <main>
         <article>
-            <h3>Week02</h3>
-            <li>I learn how to style a website with CSS</li>
-            <li>I learn more about html</li>
-            <li>I created my first Web Development Blog</li> 
-            <img src="Week02.png" alt="Web Development Image">
+            <h3>Week03</h3>
+            <li>I learn more in css</li>
+            <li>I play a game about css during class</li>
+            <li>I learn about the basic of flex box</li>
+            <li>Breifing for assignment 1 </li> 
+            <img src="Week03/Week03.png" alt="Web Development Image">
         </article>
 
     </main>
