--- a/Flipped learning/week4.html
+++ b/Flipped learning/week4.html
@@ -29,12 +29,16 @@
     </nav>
     <main>
         <article>
-            <h2>Introduction</h2>
-            <p>This website contains what I have learn during the module </p>
-            <h2>Exploring the World of Web Development, One Line of Code at a Time</h2>
-            <img src="image.png" alt="Web Development Image">
+            <h3>Week04</h3>
+            <li>I learn more in flex box</li>
+            <li>I created a website that work different in mobile view and desktop view</li> 
+            <li>Below are the image for the different view</li>
+            <h2>Desktop view</h2>
+            <img src="Week04/Week04(1).png" alt="Desktop view">
+            <h2>Mobile view</h2>
+            <img src="Week04/Week04(2).png" alt="Mobile view">
         </article>
-            
+
     </main>
     <footer>
         <p>&copy; 2023 My Web Dev Blog</p>
