--- a/Flipped learning/week5.html
+++ b/Flipped learning/week5.html
@@ -29,14 +29,20 @@
     </nav>
     <main>
         <article>
-            <h3>Week04</h3>
-            <li>I learn more in flex box</li>
-            <li>I created a website that work different in mobile view and desktop view</li> 
-            <li>Below are the image for the different view</li>
-            <h2>Desktop view</h2>
-            <img src="Week04(1).png" alt="Desktop view">
-            <h2>Mobile view</h2>
-            <img src="Week04(2).png" alt="Mobile view">
+            <h3>Week05</h3>
+            <li>During the withespace week, I learn the basic of javascript through linkedin learning</li>
+            <li>The course include INtroduction to javascript and Basic Data Types</li> 
+            <li>We are ask to complete a few quizes related to javascript</li>
+            <h2>Quizes 1</h2>
+            <img src="Week05/Quizes 1.png" alt="Quizes 1">
+            <h2>Quizes 2</h2>
+            <img src="Week05/Quizes 2.png" alt="Quizes 2">
+            <h2>Quizes 3</h2>
+            <img src="Week05/Quizes 3.png" alt="Quizes 3">
+            <h2>Quizes 4</h2>
+            <img src="Week05/Quizes 4.png" alt="Quizes 4">
+            <h2>Quizes 5</h2>
+            <img src="Week05/Quizes 5.png" alt="Quizes 5">
         </article>
 
     </main>
