--- a/Flipped learning/week1.html
+++ b/Flipped learning/week1.html
@@ -29,12 +29,10 @@
     </nav>
     <main>
         <article>
-            <h3>Week03</h3>
-            <li>I learn more in css</li>
-            <li>I play a game about css during class</li>
-            <li>I learn about the basic of flex box</li>
-            <li>Breifing for assignment 1 </li> 
-            <img src="Week03.png" alt="Web Development Image">
+            <h3>Week01</h3>
+            <li>I learn what a web developers do</li>
+            <li>I created my first website during lesson</li> 
+            <img src="Week01/Week01.png" alt="Web Development Image">
         </article>
 
     </main>
