latest update week 14

--- a/week13.html
+++ b/week13.html
@@ -31,14 +31,9 @@
     </nav>
     <main>
         <article>
-            <h3>Week04</h3>
-            <li>I learn more in flex box</li>
-            <li>I created a website that work different in mobile view and desktop view</li> 
-            <li>Below are the image for the different view</li>
-            <h2>Desktop view</h2>
-            <img src="Week04/Week04(1).png" alt="Desktop view">
-            <h2>Mobile view</h2>
-            <img src="Week04/Week04(2).png" alt="Mobile view">
+            <h3>Week13</h3>
+            <li>This week we have an online Quizes and we teacher told us about our common mistake that we make in the Asg 1</li>
+
         </article>
 
     </main>
