--- a/week6.html
+++ b/week6.html
@@ -26,19 +26,13 @@
             <li><a href="week12.html">Week12</a></li>
             <li><a href="week13.html">Week13</a></li>
             <li><a href="week14.html">Week14</a></li>
-
         </ul>
     </nav>
     <main>
         <article>
-            <h3>Week04</h3>
-            <li>I learn more in flex box</li>
-            <li>I created a website that work different in mobile view and desktop view</li> 
-            <li>Below are the image for the different view</li>
-            <h2>Desktop view</h2>
-            <img src="Week04/Week04(1).png" alt="Desktop view">
-            <h2>Mobile view</h2>
-            <img src="Week04/Week04(2).png" alt="Mobile view">
+            <h3>Week06</h3>
+            <li>I learn more about javascript</li>
+            <img src="Week06/week6.png" alt="Desktop view">
         </article>
 
     </main>
