--- a/week9.html
+++ b/week9.html
@@ -31,14 +31,9 @@
     </nav>
     <main>
         <article>
-            <h3>Week04</h3>
-            <li>I learn more in flex box</li>
-            <li>I created a website that work different in mobile view and desktop view</li> 
-            <li>Below are the image for the different view</li>
-            <h2>Desktop view</h2>
-            <img src="Week04/Week04(1).png" alt="Desktop view">
-            <h2>Mobile view</h2>
-            <img src="Week04/Week04(2).png" alt="Mobile view">
+            <h3>Week09</h3>
+            <li>I learn about bootstrap</li>
+            <img src="week09/week9.png" alt="Desktop view">
         </article>
 
     </main>
